Richard is a better speller

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -4,7 +4,7 @@ wednesday:
     length: 90
     description:
     image: http://cdn.jsdelivr.net/emojione/assets/png/1F4DD.png
-  - title: Kick-off Speach
+  - title: Kick-off Speech
     section: 
     time: 930am
     length: 30
