--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -123,5 +123,5 @@ thursday:
     section: WordPress Sponsored After Party
     time: 5pm
     length: 60
-    description: With all your spare energy, split from the conference and come close say goodbye to all of your new friends!
+    description: With all your spare energy, split from the conference and come say goodbye to all of your new friends!
     image: /img/wordpress-avatar.png
