Updates Jill Talk Title

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -47,7 +47,7 @@ wednesday:
     description:
     image: http://cdn.jsdelivr.net/emojione/assets/png/2615.png
   - title: Jill Spaeth
-    section: "Design: TBA"
+    section: "Design: Getting Comfortable With Wrong"
     time: 330pm
     length: 60
     description:
