Mandrill spelling fix cause boomsauce

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -59,7 +59,7 @@ wednesday:
     description:
     image: /img/justin-searls.jpg
   - title: "Gaffney's Patio with Vinyl Night DJ"
-    section: Madrill Sponsored After Party
+    section: Mandrill Sponsored After Party
     time: 530pm
     length: 60
     description: Enjoy good music and good company while you relax at one of Downtown Saratoga's coolest spots.
