--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -17,7 +17,7 @@ wednesday:
     description:
     image: /img/kevin-hoffman.jpg
   - title: Ian Landsman
-    section: "Ideate: TBA"
+    section: "Ideate: Ideas are Work"
     time: 11am
     length: 60
     description:
