adds PJ talk title

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -35,7 +35,7 @@ wednesday:
     description:
     image: /img/henry-modisett.jpg
   - title: PJ McCormick
-    section: "Design: The pitfalls of UX @ Amazon"
+    section: "Leading Projects Through Danger"
     time: 2pm
     length: 60
     description:
