updates henrys talk title

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -29,7 +29,7 @@ wednesday:
     description:
     image: http://cdn.jsdelivr.net/emojione/assets/png/1F374.png
   - title: Henry Modisett
-    section: "Design: TBA"
+    section: "Design: Products as Systems"
     time: 130pm
     length: 30
     description:
