Updates patrick's talk title

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -108,7 +108,7 @@ thursday:
     description:
     image: /img/simon-daryl.jpg
   - title: Patrick Ambron
-    section: "Shipping: Brand Yourself"
+    section: "Shipping: How To Get 60,000 Users in 60 Hours"
     time: 330pm
     length: 30
     description:
