changed sabrina, added kenneth and mitch

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -107,12 +107,12 @@ thursday:
     length: 60
     description:
     image: /img/simon-daryl.jpg
-  - title: Patrick Ambron
-    section: "Shipping: How To Get 60,000 Users in 60 Hours"
+  - title: Sabrina Clark
+    section: "Shipping: How We Got 60K Users in 60 Hrs"
     time: 330pm
     length: 30
     description:
-    image: /img/patrick-ambron.jpg
+    image: /img/sabrina-clark.jpg
   - title: Martin Ringlein
     section: "Closing Keynote: Launch Lessons"
     time: 4pm
