updates Margots talk title

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -102,7 +102,7 @@ thursday:
     description:
     image: /img/margot-bloomstein.jpg
   - title: Simon Ouderkirk / Daryl Houston
-    section: "Shipping: Developing Hospitality"
+    section: "Shipping: Content Strategy for Slow Experiences"
     time: 230pm
     length: 60
     description:
