--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -96,13 +96,13 @@ thursday:
     description:
     image: http://cdn.jsdelivr.net/emojione/assets/png/1F374.png
   - title: Margot Bloomstein
-    section: "Shipping: Promoting your brand"
+    section: "Shipping: Content Strategy for Slow Experiences"
     time: 130pm
     length: 60
     description:
     image: /img/margot-bloomstein.jpg
   - title: Simon Ouderkirk / Daryl Houston
-    section: "Shipping: Content Strategy for Slow Experiences"
+    section: "Shipping: Developing Hospitality"
     time: 230pm
     length: 60
     description:
