Fix Andres image link caps

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -57,7 +57,7 @@ wednesday:
     time: 430pm
     length: 60
     description:
-    image: /img/Andres-Suarez.jpg
+    image: /img/andres-suarez.jpg
   - title: "Gaffney's Patio with Vinyl Night DJ"
     section: Mandrill Sponsored After Party
     time: 530pm
