adds coffee & registration

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -1,5 +1,5 @@
 wednesday:
-  - title: Registration 8:00-9:30 AM
+  - title: Coffee & Registration 8:00-9:30 AM
     time: 8am
     length: 90
     description:
