--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -16,12 +16,12 @@ wednesday:
     length: 60
     description:
     image: /img/kevin-hoffman.jpg
-  - title: Ian Landsman
-    section: "Ideate: Ideas are Work"
+  - title: James Ruffer
+    section: "Ideate: To be announced"
     time: 945am
     length: 60
     description:
-    image: /img/ian-landsman.png
+    image: /img/james-ruffer.png
   - title: Mitchell Patterson
     section: "Ideate: Raising Seed Capital"
     time: 1030am
