--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -17,7 +17,7 @@ wednesday:
     description:
     image: /img/kevin-hoffman.jpg
   - title: James Ruffer
-    section: "Ideate: To be announced"
+    section: "Ideate: Ideas are Work"
     time: 945am
     length: 60
     description:
